swim_common/src/form/tests/derive/validated_form/trailing_schema.stderr
error: Use schema operators for chained schemas
  --> $DIR/trailing_schema.rs:21:38
   |
21 |         #[form(schema(num_items = 2, num_attrs = 3))]
   |                                      ^^^^^^^^^^^^^
